--- a/client/upiAdvisor/src/pages/results.css
+++ b/client/upiAdvisor/src/pages/results.css
@@ -391,3 +391,18 @@
   transform: scale(1.2);
   stroke: darkred;
 }
+
+.submit-comment:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.loader {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #fff;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+  display: inline-block;
+}
